@@ -129,7 +129,7 @@ public class MigrationService {
         List<MigrationEntry> entryList = entryMap.values().stream().toList();
         if (!entryList.isEmpty()) {
             int startIndex = 1;
-            MigrationEntry baseEntry = entryList.get(0);
+            MigrationEntry baseEntry = entryList.getFirst();
             // Make sure the base date is not null. If it is, it was already caught and logged above.
             while (!StringUtils.hasLength(baseEntry.date()) && startIndex < entryList.size()) {
                 baseEntry = entryList.get(startIndex);
