@@ -101,7 +101,7 @@ public class PlagiarismCaseResource {
 
         var plagiarismCases = plagiarismCaseRepository.findByExamIdWithPlagiarismSubmissionsAndComparison(examId);
         if (!plagiarismCases.isEmpty()) {
-            var plagiarismCase = plagiarismCases.get(0);
+            var plagiarismCase = plagiarismCases.getFirst();
             var exam = plagiarismCase.getExercise().getExerciseGroup().getExam();
             if (!exam.getCourse().getId().equals(courseId)) {
                 throw new ConflictException("Exam with id " + exam.getId() + " is not related to the given course id " + courseId, ENTITY_NAME, "courseMismatch");
@@ -142,16 +142,16 @@ public class PlagiarismCaseResource {
      *
      * @param courseId   the id of the course
      * @param exerciseId the id of the exercise
-     * @return the number of plagiarism cases for the given exercise
+     * @return the ResponseEntity with status 200 (OK) and with body the number of plagiarism cases for the given exercise
      */
     @GetMapping("courses/{courseId}/exercises/{exerciseId}/plagiarism-cases-count")
     @EnforceAtLeastInstructor
-    public long getNumberOfPlagiarismCasesForExercise(@PathVariable long courseId, @PathVariable long exerciseId) {
+    public ResponseEntity<Long> getNumberOfPlagiarismCasesForExercise(@PathVariable long courseId, @PathVariable long exerciseId) {
         log.debug("REST request to get number of plagiarism cases for exercise with id: {}", exerciseId);
         if (!authenticationCheckService.isAtLeastInstructorInCourse(courseId)) {
             throw new AccessForbiddenException("Only instructors of this course have access to its plagiarism cases.");
         }
-        return plagiarismCaseRepository.countByExerciseId(exerciseId);
+        return ResponseEntity.ok(plagiarismCaseRepository.countByExerciseId(exerciseId));
     }
 
     /**
